# mini_weather_app

./: .gitignore  Cargo.toml  exit
src/: config.rs  forecast.rs  geolocation.rs  main.rs  weather.rs
ui/: app-window.slint
